--- a/About.html
+++ b/About.html
@@ -24,7 +24,7 @@
 		<ul class="links">
 
 		
-		<li><a href="Contact.html">Contact</a></li>
+		<li><a href="ContactOne.html">Contact</a></li>
 		<li><a href="Projects.html">Projects</a></li>
 		<li><a href="Blog.html">Blog</a></li>
 		<li class="current-link"><a href="About.html">About</a></li>
