--- a/ContactOne.html
+++ b/ContactOne.html
@@ -23,7 +23,7 @@
 		<ul class="links">
 
 
-			<li><a href="Contact.html">Contact</a></li>
+            <li><a href="ContactOne.html">Contact</a></li>
 			<li><a href="Projects.html">Projects</a></li>
 			<li><a href="Blog.html">Blog</a></li>
 			<li><a href="About.html">About</a></li>
@@ -55,7 +55,7 @@
 	<div class="column-container-contact-form">
 		<div class="left">
 			<p class="social-subtitle">If you want to catch my future live projects or converse. Hit me up via the
-				social media links below!</p>
+				social media links below! OR if you want to collab, please sign the form below.</p>
 
 			<div class="social-links">
 				<div>
@@ -71,9 +71,9 @@
 			<div class="contact-form-wrapper">
 				<input type="text" placeholder="Name" class="n input">
 				<input type="text" placeholder="Surname" class="s input">
-				<input type="text" placeholder="Email Address" class="e input">
+				<input type="text" placeholder="Email Address" class="em input">
 				<input type="text" placeholder="Subject" class="sb input">
-				<input type="text" placeholder="Company" class="c input">
+				<input type="text" placeholder="Company" class="co input">
 				<input type="text" placeholder="Message" class="m input">
 
 			</div>
@@ -81,13 +81,14 @@
 		</div>
 		
 	</div>
-	
+
 	<div id = "btn-wrapper">
-		<button onclick="Submit()" class="submit-btn">Submit</button>
-	</div>j
+	<button onclick="Submit()" class="submit-btn">Submit</button>
+
+	</div>
+	
 
 <!--<button onclick="Back()">Back</button>-->
-
 
 
 
