--- a/CreativeEight.html
+++ b/CreativeEight.html
@@ -15,21 +15,21 @@
 </head>
 <body>
  
-	<nav> 
-		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
+	<nav style="background-color: black;">
+		<div class="logo" style="float: left;"><a href="index.html"><img src="Images/LogoNeon.png" class="logo-img"></a></div>
 		<div class="hamburger-menu">
-		<div class="bar1"></div>
-		<div class="bar2"></div>
+			<div class="bar1" style="background-color: white;"></div>
+			<div class="bar2" style="background-color: white;"></div>
 		</div>
 		<ul class="links">
 
-		
-		<li><a href="Contact.html">Contact</a></li>
-		<li><a href="Projects.html">Projects</a></li>
-		<li><a href="Blog.html">Blog</a></li>
-		<li><a href="About.html">About</a></li>
-		
-	</ul>
+
+			<li><a href="ContactOne.html">Contact</a></li>
+			<li><a href="Projects.html">Projects</a></li>
+			<li><a href="Blog.html">Blog</a></li>
+			<li><a href="About.html">About</a></li>
+
+		</ul>
 	</nav>
 
 	<section class="canvas">
@@ -53,6 +53,10 @@
 		<h6 class="tools">
 		<li>Javascript and the web </li>
 		</h6>
+		<h2 class="project-next-title">Next Project</h2>
+		<div><a href="CreativeNine.html" class="nextbtn">Project 9</a></div>
+	
+		<div><a href="Projects.html" class="backbtn">Back to Projects</a></div>
 	</section>
 
 		
