--- a/CreativeNine.html
+++ b/CreativeNine.html
@@ -16,16 +16,16 @@
 
 <body>
 
-	<nav>
-		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
+	<nav style="background-color: black;">
+		<div class="logo" style="float: left;"><a href="index.html"><img src="Images/LogoNeon.png" class="logo-img"></a></div>
 		<div class="hamburger-menu">
-			<div class="bar1"></div>
-			<div class="bar2"></div>
+			<div class="bar1" style="background-color: white;"></div>
+			<div class="bar2" style="background-color: white;"></div>
 		</div>
 		<ul class="links">
 
 
-			<li><a href="Contact.html">Contact</a></li>
+			<li><a href="ContactOne.html">Contact</a></li>
 			<li><a href="Projects.html">Projects</a></li>
 			<li><a href="Blog.html">Blog</a></li>
 			<li><a href="About.html">About</a></li>
@@ -51,6 +51,10 @@
 		<h6 class="tools">
 			<li>Adobe Illustrator</li>
 		</h6>
+		
+		<div><a href="CreativeOne.html" class="nextbtn">Project 1</a></div>
+	
+	<div><a href="Projects.html" class="backbtn">Back to Projects</a></div>
 	</section>
 
 
