--- a/CreativeOne.html
+++ b/CreativeOne.html
@@ -25,7 +25,7 @@
 		<ul class="links">
 
 
-			<li><a href="Contact.html">Contact</a></li>
+			<li><a href="ContactOne.html">Contact</a></li>
 			<li><a href="Projects.html">Projects</a></li>
 			<li><a href="Blog.html">Blog</a></li>
 			<li><a href="About.html">About</a></li>
@@ -67,13 +67,16 @@
 			internet sites.</p>
 
 
-	<div><a href="CreativeNine.html" class="btn-prev">Project 9</a></div>
+	<!--<div><a href="CreativeNine.html" class="btn-prev">Project 9</a></div>
 		
 
-	<div><a href="CreativeTwo.html" class="btn-next">Project 2</a></div>
-		
+	<div><a href="CreativeTwo.html" class="btn-next">Project 2</a></div>-->
+	<h2 class="project-next-title">Next Project</h2>
 
-
+	<div><a href="CreativeTwo.html" class="nextbtn">Project 2</a></div>
+	
+	<div><a href="Projects.html" class="backbtn">Back to Projects</a></div>
+	
 	</section>
 
 
