--- a/One.html
+++ b/One.html
@@ -1,98 +1,122 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>BlogPost_1</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
 	<script src="https://kit.fontawesome.com/9e4052c8cc.js" crossorigin="anonymous"></script>
-	<script src ="JS/myScript.js" type="text/javascript"></script>
-	
+	<script src="JS/myScript.js" type="text/javascript"></script>
+
 </head>
+
 <body>
 
- <nav> 
-		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
+	<nav>
+		<div class="logo" style="float: left;"><a href="index.html"><img src="Images/LogoNeon.png" class="logo-img"></a>
+		</div>
 		<div class="hamburger-menu">
-		<div class="bar1"></div>
-		<div class="bar2"></div>
+			<div class="bar1"></div>
+			<div class="bar2"></div>
 		</div>
 		<ul class="links">
 
-		
-		<li><a href="Contact.html">Contact</a></li>
-		<li><a href="Projects.html">Projects</a></li>
-		<li><a href="Blog.html">Blog</a></li>
-		<li><a href="About.html">About</a></li>
-		
-	</ul>
+
+			<li><a href="ContactOne.html">Contact</a></li>
+			<li><a href="Projects.html">Projects</a></li>
+			<li><a href="Blog.html">Blog</a></li>
+			<li><a href="About.html">About</a></li>
+
+		</ul>
 	</nav>
-	
+
 	<!--<button onclick="Back()">Back</button>-->
-	
-	
+
+
 
 	<article>
 		<h1 class="title">Behind The Design</h1>
-	
+
 		<div class="image-mock"></div>
 
 
 		<p class="date">05 July 2021</p>
 		<p class="author">By Lindiwe Mbuyisa</p>
-			
-		<p class="paragraph">Redesigning or first-time designing a website is a difficult task and tideous task.</p>
 
-		<p class="paragraph">Based on Saussure's theory of semiotics, he identfies that a sign is a symbol. A sign is made up of two elements a signifier and signified. He suggests that a sign is made up of a signifier and signified-the form and the idea. These depend on context; conventions of social and cultural cues in order to for people to understand and interpret. The signifier stands in for the objects, like a picture of a person is a signifier as it stands in for the person who is not physically there. The signified refers to the idea that is being evoked or communicated. Kidd (2015: 23) points out that an object can be interpreted at the denotative and connotative level which refers to the relationship of what is seen versus what is not seen at the level of the myth. For example, the Apple logo(sign), the denotation is an apple and the connotative level connotes an expensive and desirable object. A text or image which is a sign cannot just be read at its denotative level. It has meaning at the level of connotation and these connotations are meanings and interpretations that are informed by the media, our different experiences and knowledge- essentially our ideologies. These connotations eventually create myths. A myth refers to a widely accepted meaning which results in them being normalised. </p>
 
-		<p class="paragraph">This is similar to Hall's theory of representation which suggests that the the media uses stereotypes. Stereotypes refers to the oversimplification of a particular group of people. For example, Men are often portrayed as strong characters versus women who are represented as caring, you would find women in adverts that show cleaning products.  Hall's theory of representation suggest that these stereotypes are often defined by those in power. These people are the white, heterosexual male.</p>
-	
-		<p class= "paragraph">We can see that with Orientalism which is the process by which the western media create representations of the Middle East and Asia that is biased and misrepresentation of these groups (Kidd 2015: 24-25). This representation is from the perspective of the media that is of <em>“non-native onlooker” </em> (Kidd 2015: 25).  For example, games often present the player with stereotypical Arabic characters. They often represented as a terrorist in the game. They are also usually dark-skinned and would be shouting Allahu-Akabr further carrying a gun most of the time an AK-47. </p>
+		<h2 class="quote">"Designer for creativity. Artist for accessibility and Creator for change."</h2>
 
-		<p class="paragraph"> Similar to the media and how it represents people of colour particularly black people in comparison to other races. As an example, Daily Mail's representation of two footballers. The black individual is critised for spending too much money on a house versus the white footballer who is praised by the newspaper. This does not mean these representations cannot be rejected by the audience. However, the media intend on normalising these representations. </p>
 
-		<div class="row">
-		<div class="column">
-		<img src="Images/Represent.png"><p class="caption">Image example of Arab character in a game</p></div>
-		<div class="column">
-		<img src="Images/Racism.jpg">
-		<p class="caption">Image of the Daily Mail Newspaper</p></div>
-		
-	</div>
-		
+		<p class="paragraph">Figuring out your niche as a creative is a difficult and challenging task to do.
+			Furthermore creating a space for people to experience your work and have their perceived ideas is a
+			difficult task to do. The representation becomes subjective to the users who will be looking through the
+			website. The aim was to create a website for my body of work, showing the different work and beyond. It is a
+			showcase of my work but also other interests as a designer. I decided to include projects that were
+			reflective of the work I want to do. In that same breath I wanted to show the process and how it comes into
+			play in each project I have done this by detailing the project in-depth. This website is not only an
+			experience of the work but a combination of who I am, and what I define as. </p>
 
-		
-		
-		<p class="paragraph">While there are other representations and visual communication like visual literacy and visual communication like images, they are open to different interpretations as compared to other mediums of communication. In terms of the connotative functions of images; they depend on the context in which the image is used. The reading and meaning of an image are informed by their mode of presentation, production context-where the image has been produced, the historical context, the context of the image to other images and the reception and reading of the image. 
+		<h2 class="statement">The Beginning can be difficult</h2>
+		<p class="paragraph">I most definitely think that creating a website is difficult especially when you don’t know
+			where to start. I almost get carried away and begin coding. But I wanted to acknowledge the design process
+			and
+			its importance when designing a website. It helps you have a clear idea and when going into the front end
+			development, It makes it easier to code and tackle the development part of it. And so lets begin with the
+			first thing I did which is finding inspiration. I often really try to get inspiration from mainly images and
+			mediums outside of the website community. Looking at posters and image compositions really helps you design
+			something that stands out and more you. The main thing was to look less website at how stunning are those
+			award winning websites on
+			CSS winner. Hence I used the inspiration and the personal branding project as the foundation for the
+			website. </p>
+		<p class="paragraph">I begin all my designs with sketches and this helps me get into the flow of designing and
+			trying out different layouts on paper where I can erase and just sketch without having to make everything
+			perfect. Below are some of the sketches of the different sketches of the webpages on the website. As you can
+			see it is a rough sketches and not perfect. I was not looking to get the final design but try out a few
+			ideas
 		</p>
-			
 
-		<h2 class="quote">Now we find representation in the form of data visualisation.</h2>
+		<h2 class="statement">The best part of the design process</h2>
+		<p class="paragraph">The next step was jumping into Adobe XD and playing with different layouts and pushing the
+			ideas/sketches I had further. I Slowly start incorporating the colours and typography. The aim was to try
+			out
+			different layouts and structure of the content on the website. Below are the different layouts to show how
+			the idea progressed and evolved from the sketches to the final designs. Before getting to the final design,
+			I also
+			tried to play around with the typography and how I laid out the content on the website, further the colour
+			combinations. </p>
+		<h2 class="statement">The final product</h2>
+		<p class="paragraph">To explain the final design, I went with the big and bold typography taking up majority of
+			the space on the website. With the interactions of the website, I wanted to use different interactions for
+			links but also not
+			taking away from ensuring that the user will not get confused by what which words are links and not. I used
+			the comic boom shape as an overlay for the buttons. To ensure users are aware of the links; I have black
+			outline with the hover creating depth by having it white if the background is a gradient. This is also
+			applied to the outlines for the navigation of the website. This is to show in which part of the website the
+			user is
+			in. I have labelled in similar style. </p>
+
+		<h2 class="reference-title">References</h2>
 		
-		<p class="paragraph">Data visualisation has become interactive as well. This data is presented in ways that the audience can grasp or understand difficult concepts or identify new patterns. Similar to image representations, data visualisations are constructed. Kidd (2015: 31) defines data visualisation as speculative and further suggest that an infographic cannot tell the entire story. This is similar to media text as the individual in charge of collecting the data, analysing it is also another way of representing certain issues, ideas in a particular. Similar to media texts, data visualisation is about the construction which refers to the individual deciding on the angle, layout or what choices they make in trying to represent the information. Data visualisation also includes a selection process whereby the individual whereby they select particular facts, data points overs others but also, we have to consider what is not included as part of this data. This data visualisation or representation can also be influenced by the ideologies, what the person compiling this data hold which particular beliefs and values. This ultimately dictates what we see as the audience and readers/viewers of the data or images or media texts.
-		This means that representation of texts, images or data are constructed. Kidd(2015:29) suggest that they do not reflect the reality however have the ability to shape it </p>
-
-         <h2 class="reference-title">References</h2>
-		<h3 class="reference-list"> Kidd, J. 2015. Theories of Representation. <cite>Representation.</cite> Routledge. pp 23-35.</h3>
-		<h3 class="reference-list">Photo image by Mansour, Leila.<a href="https://i.pinimg.com/originals/7e/3b/83/7e3b83e676593b7f4587339890c04ea0.jpg">Arab Characters in games</a></h3>
-		<h3 class="reference-list">Photo image on right by Phillip Oldham and Phot image on left by Getty images.<a href="https://pbs.twimg.com/media/EbK1JFKXsAI95mN.jpg">Race Representation in the Media</a></h3>
 
 	</article>
-	
+
 
 	<!--<a href="Two.html" class="nextbtn btn">Next</a>-->
+	<h2 class="project-next-title">Next Blog Post</h2>
+
+	<div><a href="CreativeTwo.html" class="nextbtn">Creative Coding Experiments</a></div>
+
+	<div><a href="Blog.html" class="backbtn">Back to Blog </a></div>
 
 
 
 
 
-	<script src ="JS/nav.js" type="text/javascript"></script>
-	
+
+	<script src="JS/nav.js" type="text/javascript"></script>
+
 
 </body>
+
 </html>
-
-
-
-
-
