--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<ul class="links" id="links">
 
 
-			<li><a href="Contact.html">Contact</a></li>
+			<li><a href="ContactOne.html">Contact</a></li>
 			<li><a href="Projects.html">Projects</a></li>
 			<li><a href="Blog.html">Blog</a></li>
 			<li><a href="About.html">About</a></li>
@@ -63,37 +63,65 @@
 
 
 
-	<div id="grid-container">
+<div id="grid-container">
 		
-		<div class="grid-item a">
-		<div class="grid-item-img" style="background-image: url(Images/ProjectOne.jpg);"><a href="CreativeOne.html"></a></div>
-		</div>
-		<div class="grid-item b">
-		<div class="grid-item-img" style="background-image: url(Images/ProjectTwo.jpg);"><a href="CreativeTwo.html"></a></div>
-		</div>
-		<div class="grid-item c">
-		<div class="grid-item-img" style="background-image: url(Images/ProjectThree.jpg);"><a href="CreativeThree.html"></a></div>
-		</div>
-		<div class="grid-item d">
-		<div class="grid-item-img" style="background-image: url(Images/ProjectFour.jpg);"><a href="CreativeFour.html"></a></div>
-		</div>
-		<div class="grid-item e">
-		<div class="grid-item-img" style="background-image: url(Images/ProjectFive.jpg);"><a href="CreativeFive.html"></a></div>
-		</div>
-		<div class="grid-item f">
-		<div class="grid-item-img" style="background-image: url(Images/ProjectSix.jpg);"><a href="CreativeSix.html"></a></div>
-		</div>
-		<div class="grid-item g">
-		<div class="grid-item-img" style="background-image: url(Images/ProjectSeven.jpg);"><a href="CreativeSeven.html"></a></div>
-		</div>
-		<div class="grid-item h">
-		<div class="grid-item-img" style="background-image: url(Images/ProjectEight.jpg);"><a href="CreativeEight.html"></a></div>
-		</div>
-		<div class="grid-item i">
-		<div class="grid-item-img" style="background-image: url(Images/ProjectNine.jpg);"><a href="CreativeNine.html"></a></div>
-		</div>
-
+	<div class="grid-item a">
+	<a href="CreativeOne.html"><div class="grid-item-img" style="background-image: url(Images/ProjectOne.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Personal Branding</h2>
 	</div>
+	</div></a>
+	<div class="grid-item b">
+	<a href="CreativeTwo.html"><div class="grid-item-img" style="background-image: url(Images/ProjectTwo.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Youth Day Campaign</h2>
+	</div>
+	</div></a>
+	<div class="grid-item c">
+	<a href="CreativeThree.html"><div class="grid-item-img" style="background-image: url(Images/ProjectThree.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">36 Days of Type</h2>
+	</div>
+	</div></a>
+	<div class="grid-item d">
+	<a href="CreativeFour.html"><div class="grid-item-img" style="background-image: url(Images/ProjectFour.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Nike Verona</h2>
+	</div>
+	</div></a>
+	<div class="grid-item e">
+	<a href="CreativeFive.html"><div class="grid-item-img" style="background-image: url(Images/ProjectFive.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Converse</h2>
+	</div>
+	</div></a>
+	<div class="grid-item f">
+	<a href="CreativeSix.html"><div class="grid-item-img" style="background-image: url(Images/ProjectSix.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Interactive art</h2>
+	</div>
+	</div></a>
+	<div class="grid-item g">
+	<a href="CreativeSeven.html"><div class="grid-item-img" style="background-image: url(Images/ProjectSeven.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Creative Coding</h2>
+	</div>
+	</div></a>
+	<div class="grid-item h">
+	<a href="CreativeEight.html"><div class="grid-item-img" style="background-image: url(Images/ProjectEight.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Creative Coding</h2>
+	</div>
+	</div></a>
+	<div class="grid-item i">
+	<a href="CreativeNine.html"><div class="grid-item-img" style="background-image: url(Images/ProjectNine.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Creative Coding</h2>
+	</div>
+	</div></a>
+
+</div>
+
 
 	<div style="background: linear-gradient(to bottom, #D0FB21, #9AFA12, #39EE04)">
 		<h1 class="contact-section">LeT'S COLLaB</h1>
