--- a/Blog.html
+++ b/Blog.html
@@ -12,7 +12,7 @@
 
 	
     <nav> 
-		<div class="logo" style="float: left;"><a href="index.html"><img src="Images/LogoWhite.png" class="logo-img"></a></div>
+		<div class="logo" style="float: left;"><a href="index.html"><img src="Images/LogoNeon.png" class="logo-img"></a></div>
 		<div class="hamburger-menu">
 		<div class="bar1"></div>
 		<div class="bar2"></div>
@@ -20,7 +20,7 @@
 		<ul class="links">
 
 		
-		<li><a href="Contact.html">Contact</a></li>
+		<li><a href="ContactOne.html">Contact</a></li>
 		<li><a href="Projects.html">Projects</a></li>
 		<li><a href="Blog.html">Blog</a></li>
 		<li><a href="About.html">About</a></li>
@@ -42,6 +42,22 @@
 		<a href="One.html"><h2 class="blog-title">Behind The Design</h2></a>
 		</div>
 		</section>
+		<section>
+		<div class="line"></div>
+		<div class="column-container">
+		<h3 class="number">02</h3>
+		<a href="One.html"><h2 class="blog-title">Behind the Interactive Experiments</h2></a>
+		</div>
+		</section>
+		<section>
+		<div class="line"></div>
+		<div class="column-container">
+		<h3 class="number">03</h3>
+		<a href="One.html"><h2 class="blog-title">Approach for Coding your website from scratch</h2></a>
+		</div>
+		</section>
+		
+	
 
 		
 	   
