--- a/CreativeFour.html
+++ b/CreativeFour.html
@@ -6,7 +6,7 @@
 
 	<meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	 <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
+	 <link rel="stylesheet" type="text/css" href="CSS/style.css">
 	<script src ="JS/myScript.js" type="text/javascript"></script>
 	
 	
@@ -14,21 +14,21 @@
 </head>
 <body>
 
- <nav> 
-		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
+	<nav style="background-color: black;">
+		<div class="logo" style="float: left;"><a href="index.html"><img src="Images/LogoNeon.png" class="logo-img"></a></div>
 		<div class="hamburger-menu">
-		<div class="bar1"></div>
-		<div class="bar2"></div>
+			<div class="bar1" style="background-color: white;"></div>
+			<div class="bar2" style="background-color: white;"></div>
 		</div>
 		<ul class="links">
 
-		
-		<li><a href="Contact.html">Contact</a></li>
-		<li><a href="Projects.html">Projects</a></li>
-		<li><a href="Blog.html">Blog</a></li>
-		<li><a href="About.html">About</a></li>
-		
-	</ul>
+
+			<li><a href="ContactOne.html">Contact</a></li>
+			<li><a href="Projects.html">Projects</a></li>
+			<li><a href="Blog.html">Blog</a></li>
+			<li><a href="About.html">About</a></li>
+
+		</ul>
 	</nav>
 
 
@@ -53,6 +53,11 @@
 		<h6 class="tools">
 		<li>Javascript and the web </li>
 		</h6>
+
+		<h2 class="project-next-title">Next Project</h2>
+		<div><a href="CreativeFive.html" class="nextbtn">Project 5</a></div>
+	
+		<div><a href="Projects.html" class="backbtn">Back to Projects</a></div>
 	</section>
 	
 
