--- a/CreativeTwo.html
+++ b/CreativeTwo.html
@@ -16,16 +16,16 @@
 
 <body>
 
-	<nav>
+	<nav style="background-color: black;">
 		<div class="logo" style="float: left;"><a href="index.html"><img src="Images/LogoNeon.png" class="logo-img"></a></div>
 		<div class="hamburger-menu">
-			<div class="bar1"></div>
-			<div class="bar2"></div>
+			<div class="bar1" style="background-color: white;"></div>
+			<div class="bar2" style="background-color: white;"></div>
 		</div>
 		<ul class="links">
 
 
-			<li><a href="Contact.html">Contact</a></li>
+			<li><a href="ContactOne.html">Contact</a></li>
 			<li><a href="Projects.html">Projects</a></li>
 			<li><a href="Blog.html">Blog</a></li>
 			<li><a href="About.html">About</a></li>
@@ -65,7 +65,12 @@
 		
 		<h6 class="reference">Other Resources</h6>
 		<a href="" class="reference-link">SA-history</a>
-	</section>
+
+		<h2 class="project-next-title">Next Project</h2>
+		<div><a href="CreativeThree.html" class="nextbtn">Project 3</a></div>
+	
+		<div><a href="Projects.html" class="backbtn">Back to Projects</a></div>
+		</section>
 
 
 
