--- a/Projects.html
+++ b/Projects.html
@@ -22,7 +22,7 @@
 		<ul class="links">
 
 		
-		<li><a href="Contact.html">Contact</a></li>
+		<li><a href="ContactOne.html">Contact</a></li>
 		<li><a href="Projects.html">Projects</a></li>
 		<li><a href="Blog.html">Blog</a></li>
 		<li><a href="About.html">About</a></li>
@@ -41,8 +41,82 @@
 </div>
 
 	
+
+<div id="grid-container">
+		
+	<div class="grid-item a">
+	<a href="CreativeOne.html"><div class="grid-item-img" style="background-image: url(Images/ProjectOne.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Personal Branding</h2>
+	</div>
+	</div></a>
+	<div class="grid-item b">
+	<a href="CreativeTwo.html"><div class="grid-item-img" style="background-image: url(Images/ProjectTwo.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Youth Day Campaign</h2>
+	</div>
+	</div></a>
+	<div class="grid-item c">
+	<a href="CreativeThree.html"><div class="grid-item-img" style="background-image: url(Images/ProjectThree.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">36 Days of Type</h2>
+	</div>
+	</div></a>
+	<div class="grid-item d">
+	<a href="CreativeFour.html"><div class="grid-item-img" style="background-image: url(Images/ProjectFour.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Nike Verona</h2>
+	</div>
+	</div></a>
+	<div class="grid-item e">
+	<a href="CreativeFive.html"><div class="grid-item-img" style="background-image: url(Images/ProjectFive.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Converse</h2>
+	</div>
+	</div></a>
+	<div class="grid-item f">
+	<a href="CreativeSix.html"><div class="grid-item-img" style="background-image: url(Images/ProjectSix.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Interactive art</h2>
+	</div>
+	</div></a>
+	<div class="grid-item g">
+	<a href="CreativeSeven.html"><div class="grid-item-img" style="background-image: url(Images/ProjectSeven.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Creative Coding</h2>
+	</div>
+	</div></a>
+	<div class="grid-item h">
+	<a href="CreativeEight.html"><div class="grid-item-img" style="background-image: url(Images/ProjectEight.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Creative Coding</h2>
+	</div>
+	</div></a>
+	<div class="grid-item i">
+	<a href="CreativeNine.html"><div class="grid-item-img" style="background-image: url(Images/ProjectNine.jpg);"></div>
+	<div class="overlay-text">
+	<h2 class="title-text">Creative Coding</h2>
+	</div>
+	</div></a>
+
+</div>
 	
-	
+<div>
+	<h1 class="contact-section">LeT'S COLLaB</h1>
+
+	<div class="box">
+		<div>
+			<h6 class="social-twitter"><a href="/">Twitter</a></h6>
+		</div>
+		<div>
+			<h6 class="social-behance"><a href="/">Behance</a></h6>
+		</div>
+		<div>
+			<h6 class="social-email"><a href="/">Email</a></h6>
+		</div>
+	</div>
+</div>
+
 	
 <script src ="JS/nav.js"></script>
 <script src ="JS/myScript.js" type="text/javascript"></script>
